--- a/1154-RR.25.1/cabo-verde.yaml
+++ b/1154-RR.25.1/cabo-verde.yaml
@@ -1,8 +1,9 @@
+---
 #Cabo Verde (Republic of)
-#Amateur stations:	
+#Amateur stations:
 #D44AA-D44ZZ
 
 groups:
   amateur:
     - name: Cabo Verde
-      regex: D44[:upper]
+      regex: D44[:upper:]{2}
