--- a/1154-RR.25.1/cameroon.yaml
+++ b/1154-RR.25.1/cameroon.yaml
@@ -1,8 +1,9 @@
+---
 #Cameroon (Republic of)
-#Amateur stations:	
+#Amateur stations:
 #TJ1 followed by 2 letters
 
 groups:
   amateur:
     - name: Cameroon
-      regex: TJ1{2}
+      regex: TJ1[:upper:]{2}
