--- a/1154-RR.25.1/brunei.yaml
+++ b/1154-RR.25.1/brunei.yaml
@@ -1,12 +1,13 @@
+---
 #Brunei Darussalam
-#Amateur stations:	
+#Amateur stations:
 #V85 followed by 2 or 3 letters for the communications HF and VHF
 #V85 followed by 1 letter for the communications VHF only
 
 groups:
   amateur:
   - name: communications HF and VHF
-    regex: V85{2,3}
+    regex: V85[:upper:]{2,3}
 
   - name: communications VHF only
-    regex: V85
+    regex: V85[:upper:]
