--- a/1154-RR.25.1/bulgaria.yaml
+++ b/1154-RR.25.1/bulgaria.yaml
@@ -1,8 +1,9 @@
+---
 #Bulgaria (Republic of)
-#Amateur stations:	
+#Amateur stations:
 #LZ1-LZ9 followed by a group of not more than 3 letters
 
 groups:
   amateur:
-    - name: Bulgaria 
-      regex: LZ[1-9]{3}
+    - name: Bulgaria
+      regex: LZ[1-9][:upper:]{1,3}
