--- a/1154-RR.25.1/venezuela.yaml
+++ b/1154-RR.25.1/venezuela.yaml
@@ -1,8 +1,8 @@
 ---
 #Venezuela (Bolivarian Republic of)
-#Amateur stations:	YV, YX or 4M followed by a digit and 3 letters
+#Amateur stations: YV, YX or 4M followed by a digit and 3 letters
 
 groups:
   amateur:
     - name: Venezuela
-      regex: EP[:digit:][:upper:]{2}
+      regex: [YV|YX|4M][:digit:][:upper:]{3}
