--- a/1154-RR.25.1/chile.yaml
+++ b/1154-RR.25.1/chile.yaml
@@ -1,16 +1,16 @@
 ---
 #Chile
-#Amateur stations:	
+#Amateur stations:
 #CE or XQ followed by a digit (indicating the zone in which the station is situated) and by 2 or 3 letters
-#CE1-CE8	followed by 2 or 3 letters – Mainland Chile
-#CE9 followed by 2 or 3 letters	– Antarctic
-#CE0Y	followed by 2 or 3 letters – Easter Island
-#CE0Z	followed by 2 letters	– Juan Fernández and San Félix Islands
+#CE1-CE8 followed by 2 or 3 letters – Mainland Chile
+#CE9 followed by 2 or 3 letters – Antarctic
+#CE0Y followed by 2 or 3 letters – Easter Island
+#CE0Z followed by 2 letters – Juan Fernández and San Félix Islands
 
 groups:
   amateur:
     - name: Chile
-      regex: [CE|XQ][:digit:][:upper:]{2,3}
+      regex: (CE|XQ)[:digit:][:upper:]{2,3}
 
     - name: Mainland Chile
       regex: CE[1-8][:upper:]{2,3}
