Some more fixes to 1154-RR.25.1

--- a/1154-RR.25.1/argentina.yaml
+++ b/1154-RR.25.1/argentina.yaml
@@ -34,7 +34,7 @@
 
 groups:
   amateur:
-    regex: [(AY,AZ,LU,LW)][:digit:][:province:][A-Z]
+    regex: "(AY|AZ|LU|LW)[:digit:][:province:][A-Z]"
 
     criteria:
       1:
