--- a/1154-RR.25.1/ethiopia.yaml
+++ b/1154-RR.25.1/ethiopia.yaml
@@ -1,6 +1,6 @@
 ---
 #Ethiopia (Federal Democratic Republic of)
-#Amateur stations: 
+#Amateur stations:
 #ET3AA-ET3ZZ
 #9E3AA-9F3ZZ
 
@@ -8,6 +8,6 @@ groups:
   amateur:
     - name: Ethiopia
       regex: ET3[:upper:]{2}
-    
+
     - name: Ethiopia
-      regex: 9[E-F]3[:upper:]{2}
+      regex: 9[EF]3[:upper:]{2}
