--- a/1154-RR.25.1/bahamas.yaml
+++ b/1154-RR.25.1/bahamas.yaml
@@ -2,7 +2,7 @@
 # Bahamas (Commonwealth of the)
 # Amateur stations and experimental stations:  C62AA-C69ZZ
 groups:
-  amateur:
+  amateur: &general
     regex: C6[2-9][:upper:]{2}
     criteria:
       1: C6
@@ -14,14 +14,4 @@ groups:
         to: Z
         cardinality: 2
 
-  experimental:
-    regex: C6[2-9][:upper:]{2}
-    criteria:
-      1: C6
-      2:
-        from: 2
-        to: 9
-      3:
-        from: A
-        to: Z
-        cardinality: 2
+  experimental: *general
