--- a/1154-RR.25.1/burkina-faso.yaml
+++ b/1154-RR.25.1/burkina-faso.yaml
@@ -4,8 +4,7 @@
 #experimental stations: XT2 or XT3 followed by 2 letters
 
 groups:
-  amateur:
+  amateur: &general
     regex: XT[2-3][:upper:]{2}
 
-  experimental:
-    regex: XT[2-3][:upper:]{2}
+  experimental: *general
