--- a/1154-RR.25.1/cuba.yaml
+++ b/1154-RR.25.1/cuba.yaml
@@ -1,22 +1,22 @@
 ---
 #Cuba
-#Amateur stations: 
+#Amateur stations:
 #T4, CL, CM or CO followed by a digit (indicating the province or zone in which the station is situated) and by 1, 2 or 3 letters
-# Digits indicating the provinces or zones: 
-# 1 – Province of Pinar del Río 
-# 2 – Province of Havana City 
-# 3 – Province of Havana 
-# 4 – Municipality of Isla de la Juventud 
-# 5 – Province of Matanzas 
-# 6 – Provinces of Villa Clara, Cienfuegos and Sancti Spíritus 
-# 7 – Provinces of Ciego de Ávila and Camagüey 
+# Digits indicating the provinces or zones:
+# 1 – Province of Pinar del Río
+# 2 – Province of Havana City
+# 3 – Province of Havana
+# 4 – Municipality of Isla de la Juventud
+# 5 – Province of Matanzas
+# 6 – Provinces of Villa Clara, Cienfuegos and Sancti Spíritus
+# 7 – Provinces of Ciego de Ávila and Camagüey
 # 8 – Provinces of Santiago de Cuba, Granma, Holguín, Las Tunas and Guantánamo
 
 groups:
   amateur:
-    regex: [T4|CL|CM|CO][:amateur_area:][:upper:]{1,3}
+    regex: (T4|CL|CM|CO)[:amateur_area:][:upper:]{1,3}
     criteria:
-      1: 
+      1:
         - T4
         - CL
         - CM
@@ -31,9 +31,9 @@ groups:
 codelists:
   amateur_area:
     1: Province of Pinar del Río
-    2: Province of Havana City 
+    2: Province of Havana City
     3: Province of Havana
-    4: Municipality of Isla de la Juventud 
+    4: Municipality of Isla de la Juventud
     5: Province of Matanzas
     6: Provinces of Villa Clara, Cienfuegos and Sancti Spíritus
     7: Provinces of Ciego de Ávila and Camagüey
