--- a/1154-RR.25.1/dominican-republic.yaml
+++ b/1154-RR.25.1/dominican-republic.yaml
@@ -14,18 +14,18 @@
 
 groups:
   amateur:
-    regex: HI[:amateur_area:][:upper:]{1,3}
+    regex: HI[:zone:][:upper:]{1,3}
     criteria:
       1: HI
       2:
-        codelist: amateur_area
+        codelist: zone
       3:
         from: A
         to: Z
         cardinality: 1-3
 
 codelists:
-  amateur_area:
+  zone:
     1: Beata Island
     2: Saona Island
     3: Central Cibao Region
